# BallDetector

./: .gitignore  BallDetector.cpp  BallDetector.h  BallDetectorV2.cpp  BallDetectorV2.h  CMakeLists.txt  CameraParametrs.json  ColorFilter.cpp  ColorFilter.h  Cylinder.py  MyLog.txt  OX.py  Parser.py  README.md  RealRes.txt  Undistort.txt  Undistort_by_Jenny.txt  intrinsics0.json  parserv2.py
CalibCam/: CalibCam1.py  Calib_Param.txt  Extrinsics.json  getExtrinsics.py  intrinsics0.json
TestImagesLight2DMove/: FindCord.txt  FindCord3DSmallK.txt  FindCordK=0001.txt  FindCordSmalK0007.txt  LogBlender.txt  LogBlender2D.txt  LogBlender3D.txt  LogBlenderTochno.txt  LogNorma.txt  LogNorma65.txt
analysis/: 3dTrajectory.py  BallDetectorLog1000img.txt  BallDetectorLog1000imgOldCameraMatrix.txt  BallDetectorLog3DMove10.txt  BallDetectorLog3DMove50.txt  BallDetectorLog3DMoveWithFockusMinus.txt  BallDetectorLog3DMoveWithFockusPlus.txt  BallDetectorLog48video.txt  BallDetectorLog48video959CameraMatrix.txt  BallDetectorLog48videoCycles.txt  BallDetectorLog48videoCyclesOldColor.txt  BallDetectorLog48videoWithSomeErode.txt  BallDetectorLog48videoWithotErode.txt  BallDetectorLog63Camera0.12.txt  BallDetectorLog63video.txt  BallDetectorLogCannyVideo63.txt  BallDetectorLogHistUse.txt  BallDetectorLogMomentIUse.txt  BallDetectorLogMomentWithCameraMatrix.txt  BallDetectorLogSobel63MoutinBlur05_03.txt  BallDetectorLogSobelFilter63Frame.txt  BallDetectorLogSobelFilter63FrameV2.txt  BallDetectorLogSobelFilter63FrameV3.txt  BallDetectorLogSobelVectorDotVideo63.txt  BallDetectorLogSobelVectorDotVideo63LowQuail.txt  CoordinateLogVideo32.txt  (+20 more)
(+4 files in other folders)
